<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
      android:id="@+id/ed_uuid"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:hint="@string/ed_uuid"
      android:imeOptions="actionNext"
      android:inputType="textPersonName"
      android:textSize="14sp" />

    <Button
      android:id="@+id/bt_ugen"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/bt_ugen" />

  </LinearLayout>

  <EditText
    android:id="@+id/ed_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/ed_name"
    android:imeOptions="actionNext"
    android:inputType="textPersonName"
    android:textSize="14sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_price"
      android:textSize="24sp" />

    <EditText
      android:id="@+id/ed_euros"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:hint="@string/ed_euros"
      android:imeOptions="actionNext"
      android:inputType="number" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tv_separator" />

    <EditText
      android:id="@+id/ed_cents"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:ems="10"
      android:hint="@string/ed_cents"
      android:imeOptions="actionDone"
      android:inputType="number" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/bt_gentag"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_weight="1"
      android:text="@string/bt_gentag" />

    <Button
      android:id="@+id/bt_dectag"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_weight="1"
      android:text="@string/bt_dectag" />
  </LinearLayout>

  <TextView
    android:id="@+id/tv_nokey"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:text="@string/tv_nokey" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
      android:id="@+id/bt_genkey"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="10dp"
      android:text="@string/bt_genkey" />

    <Button
      android:id="@+id/bt_send"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:text="@string/bt_send" />

    <Button
      android:id="@+id/bt_showkey"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:text="@string/bt_showkey" />

  </LinearLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/tv_pubkey"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20sp" />
  </ScrollView>

</LinearLayout>